--- a/Prediction Service.ipynb
+++ b/Prediction Service.ipynb
@@ -25,8 +25,7 @@
    "outputs": [],
    "source": [
     "from flask import Flask, jsonify, request\n",
-    "from sklearn.externals import joblib\n",
-    "import numpy as np"
+    "from sklearn.externals import joblib"
    ]
   },
   {
