--- a/Prediction Service.ipynb
+++ b/Prediction Service.ipynb
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from flask import Flask, jsonify, request\n",
-    "from sklearn.externals import joblib"
+    "import data_wrangler"
    ]
   },
   {
@@ -37,27 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "app = Flask(__name__)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Load pre-trained model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = joblib.load('iris_clf_model.pkl')"
    ]
   },
   {
@@ -69,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +109,7 @@
     "def predict():\n",
     "    data = request.form['data']\n",
     "    petal_details = [[float(i) for i in r.split(',')] for r in data.split('|')]\n",
-    "    result = model.predict(petal_details)\n",
+    "    result = data_wrangler.pre_process_and_predict(petal_details)\n",
     "    return jsonify({'prediction': str(result) })"
    ]
   },
@@ -138,17 +122,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://127.0.0.1:8181/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [19/Nov/2017 11:49:13] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == '__main__':\n",
     "    app.run(debug=False, port=8181)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
